# customization_enterprise_device_management

./: AGENTS.md  OAT.xml  README.md  README_zh.md  bundle.json  edm.gni
common/config/: BUILD.gn  common.gni
common/native/: BUILD.gn
common/native/include/: admin_action.h  admin_type.h  allowed_notification_bundles_type.h  bluetooth_protocol_models.h  bundle_manager_utils.h  cjson_check.h  clear_up_application_data_param.h  clipboard_info.h  clipboard_policy.h  edm_constants.h  edm_data_ability_utils.h  edm_errors.h  edm_log.h  edm_permission.h  edm_sys_manager.h  edm_utils.h  enable_self_device_admin_param.h  func_code.h  hisysevent_adapter.h  managed_event.h  message_parcel_utils.h  operate_device_param.h  parcel_macro.h  password_policy.h  permission_managed_state_info.h  policy_flag.h  policy_struct.h  policy_type.h  restrictions_feature.h  running_mode.h  security_report.h  usb_device_id.h  wall_paper_param.h  watermark_image_type.h  watermark_param.h  wifi_id.h
common/native/src/: bundle_manager_utils.cpp  edm_data_ability_utils.cpp  edm_permission.cpp  edm_sys_manager.cpp  edm_utils.cpp  hisysevent.yaml  hisysevent_adapter.cpp  message_parcel_utils.cpp  security_report.cpp  usb_device_id.cpp  wifi_id.cpp
framework/extension/: BUILD.gn  libenterprise_admin_extension.map
framework/extension/include/: enterprise_admin_extension.h  enterprise_admin_extension_context.h  enterprise_admin_extension_module_loader.h  enterprise_admin_stub.h  enterprise_admin_stub_impl.h  ienterprise_admin.h  js_enterprise_admin_extension.h  js_enterprise_admin_extension_context.h
framework/extension/src/: enterprise_admin_extension.cpp  enterprise_admin_extension_context.cpp  enterprise_admin_extension_module_loader.cpp  enterprise_admin_stub.cpp  enterprise_admin_stub_impl.cpp  js_enterprise_admin_extension.cpp  js_enterprise_admin_extension_context.cpp
interfaces/inner_api/: BUILD.gn  libedmservice_kits.map
interfaces/inner_api/include/: device_settings_manager.h  ent_info.h  enterprise_device_mgr_proxy.h  ienterprise_device_mgr.h  policy_info.h
interfaces/inner_api/plugin_kits/: BUILD.gn  libplugin_kits.map
interfaces/inner_api/src/: device_settings_manager.cpp  enterprise_device_mgr_proxy.cpp
interfaces/kits/: BUILD.gn
interfaces/kits/account_manager/: BUILD.gn
interfaces/kits/admin_manager/: BUILD.gn
interfaces/kits/application_manager/: BUILD.gn
interfaces/kits/bluetooth_manager/: BUILD.gn
interfaces/kits/browser/: BUILD.gn
interfaces/kits/bundle_manager/: BUILD.gn
interfaces/kits/common/: BUILD.gn
interfaces/kits/common_kits/: BUILD.gn
interfaces/kits/datetime_manager/: BUILD.gn
interfaces/kits/device_control/: BUILD.gn
interfaces/kits/device_info/: BUILD.gn
interfaces/kits/device_settings/: BUILD.gn
interfaces/kits/enterprise_admin_extension/: BUILD.gn  enterprise_admin_extension_ability.js  enterprise_admin_extension_ability_module.cpp
interfaces/kits/enterprise_admin_extension_context/: BUILD.gn  enterprise_admin_extension_context.js  enterprise_admin_extension_context_module.cpp
interfaces/kits/include/: enterprise_device_manager_addon.h
interfaces/kits/location_manager/: BUILD.gn
interfaces/kits/network_manager/: BUILD.gn
interfaces/kits/restrictions/: BUILD.gn
interfaces/kits/security_manager/: BUILD.gn
interfaces/kits/src/: enterprise_device_manager_addon.cpp
interfaces/kits/system_manager/: BUILD.gn
interfaces/kits/telephony_manager/: BUILD.gn
interfaces/kits/usb_manager/: BUILD.gn
interfaces/kits/wifi_manager/: BUILD.gn
services/edm/: BUILD.gn
services/edm/include/: ability_manager_death_recipient.h  admin.h  admin_container.h  admin_manager.h  admin_policies_storage_rdb.h  application_state_observer.h  clipboard_utils.h  device_policies_storage_rdb.h  edm_bluetooth_manager_impl.h  edm_permission.h  edm_timer_info.h  edm_timer_manager.h  enterprise_admin_conn_manager.h  enterprise_admin_connection.h  enterprise_admin_proxy.h  enterprise_device_mgr_ability.h  enterprise_device_mgr_stub.h  ext_info_manager.h  extra_policy_notification.h  hisysevent_adapter.h  iplugin.h  iplugin_template.h  ipolicy_serializer.h  language_manager.h  notification_info.h  notification_manager.h  permission_checker.h  permission_manager.h  plugin_manager.h  policy_manager.h  super_admin.h  system_service_start_handler.h  user_policy_manager.h
services/edm/src/: ability_manager_death_recipient.cpp  admin.cpp  admin_container.cpp  admin_manager.cpp  admin_policies_storage_rdb.cpp  application_state_observer.cpp  clipboard_utils.cpp  device_policies_storage_rdb.cpp  edm_bluetooth_manager_impl.cpp  edm_permission.cpp  edm_timer_info.cpp  edm_timer_manager.cpp  enterprise_admin_conn_manager.cpp  enterprise_admin_connection.cpp  enterprise_admin_proxy.cpp  enterprise_device_mgr_ability.cpp  enterprise_device_mgr_stub.cpp  ext_info_manager.cpp  extra_policy_notification.cpp  hisysevent.yaml  hisysevent_adapter.cpp  iplugin.cpp  language_manager.cpp  notification_manager.cpp  permission_checker.cpp  permission_manager.cpp  plugin_manager.cpp  policy_manager.cpp  system_service_start_handler.cpp  user_policy_manager.cpp
services/edm/test/: BUILD.gn
services/edm_plugin/: BUILD.gn  plugin.gni
services/edm_plugin/include/: add_os_account_plugin.h  allowed_bluetooth_devices_plugin.h  allowed_bluetooth_whitelist_plugin.h  allowed_install_bundles_plugin.h  allowed_notification_bundles_plugin.h  allowed_usb_devices_plugin.h  allowed_wifi_list_plugin.h  bundle_install_plugin.h  bundle_manager_plugin.h  clear_up_application_data_plugin.h  clipboard_policy_plugin.h  disable_activation_lock_plugin.h  disable_app_clone_plugin.h  disable_bluetooth_plugin.h  disable_camera_plugin.h  disable_hdc_plugin.h  disable_hdc_remote_plugin.h  disable_maintenance_mode_plugin.h  disable_microphone_plugin.h  disable_mtp_client_plugin.h  disable_mtp_server_plugin.h  (+121 more)
services/idl/: AdminType.idl  BUILD.gn  EnableSource.idl  IEnterpriseDeviceMgrIdl.idl
test/fuzztest/: BUILD.gn
test/unittest/: BUILD.gn  cfi_blocklist.txt
tools/edm/: BUILD.gn
(+1988 files in other folders)
