# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

SUBSYSTEM_DIR = "//base/customization/enterprise_device_management"
EDM_SA_ROOT = "$SUBSYSTEM_DIR/services/edm"
EDM_SRC_PATH = "$EDM_SA_ROOT/src"
JSONCPP_INCLUDE_DIR = "//third_party/jsoncpp/include"
EDM_INNERKITS_PATH = "${SUBSYSTEM_DIR}/interfaces/inner_api/"
