# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/customization/enterprise_device_management"
ROOT = "${SUBSYSTEM_DIR}/framework/extension"
SRC_PATH = "${ROOT}/src"

config("enterprise_admin_config") {
  include_dirs = [ "${SUBSYSTEM_DIR}/common/native/include" ]
}

config("enterprise_admin_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("enterprise_admin_extension") {
  sources = [
    "$SRC_PATH/enterprise_admin_extension.cpp",
    "$SRC_PATH/enterprise_admin_extension_context.cpp",
    "$SRC_PATH/enterprise_admin_stub.cpp",
    "$SRC_PATH/enterprise_admin_stub_impl.cpp",
    "$SRC_PATH/js_enterprise_admin_extension.cpp",
    "$SRC_PATH/js_enterprise_admin_extension_context.cpp",
  ]

  configs = [
    ":enterprise_admin_config",
    "//base/customization/enterprise_device_management/common/config:coverage_flags",
  ]

  public_configs = [ ":enterprise_admin_public_config" ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

ohos_shared_library("enterprise_admin_extension_module") {
  include_dirs = [ "include" ]

  sources = [ "$SRC_PATH/enterprise_admin_extension_module_loader.cpp" ]

  configs = [ "//base/customization/enterprise_device_management/common/config:coverage_flags" ]
  deps = [ ":enterprise_admin_extension" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
  ]

  relative_install_dir = "extensionability/"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}
