# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/customization/enterprise_device_management"

ohos_shared_library("enterprisedevicemanager") {
  include_dirs = [
    "//third_party/node/src",
    "$SUBSYSTEM_DIR/common/native/include",
    "$SUBSYSTEM_DIR/interfaces/kits/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api/include",
  ]

  sources = [
    "$SUBSYSTEM_DIR/common/native/src/hisysevent_adapter.cpp",
    "src/enterprise_device_manager_addon.cpp",
  ]

  external_deps = [
    "ability_base:want",
    "enterprise_device_management:edmservice_kits",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
  ]

  relative_install_dir = "module"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}
